--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,13 @@
 ---
-// Component Imports
-import Tour from '../components/Tour.astro';
-// You can import components from any supported Framework here!
-import ReactCounter from '../components/ReactCounter.jsx';
-import SvelteCounter from '../components/SvelteCounter.svelte';
+// server-side build JS/TS:
 
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-let title = 'My Astro Site';
+import Heading from '../components/Heading.astro';
+import Calendar from '../components/Calendar.tsx';
+import Line from '../components/Line.svelte';
 
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
+const title: string = 'Astro-powered Calendar';
 ---
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,35 +18,14 @@ let title = 'My Astro Site';
     <link rel="stylesheet" href="/style/home.css">
 
     <style>
-        header {
-            display: flex;
-            flex-direction: column;
-            gap: 1em;
-            max-width: min(100%, 68ch);
-        }
+        
     </style>
 </head>
 <body>
+    <Heading/>
+    <Line/>
     <main>
-        <header>
-            <div>
-                <img width="60" height="80" src="/assets/logo.svg" alt="Astro logo">
-                <h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
-            </div>
-        </header>
-
-        <Tour />
-
-        <!--
-           - You can also use imported framework components directly in your markup!
-           -
-           - Note: by default, these components are NOT interactive on the client.
-           - The `:visible` directive tells Astro to make it interactive.
-           -
-           - See https://docs.astro.build/core-concepts/component-hydration/ 
-           -->
-        <ReactCounter client:visible />
-        <SvelteCounter client:visible />
+        <Calendar client:visible/>
     </main>
 </body>
 </html>
