looks more like a calendar now

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,1 +1,8 @@
-<h1>Astro-powered Calendar</h1>
+<p>Astro-powered Calendar</p>
+
+<style>
+  p {
+    text-align: center;
+    margin-top:0;
+  }
+</style>
