--- a/public/style/global.css
+++ b/public/style/global.css
@@ -4,18 +4,23 @@
 }
 
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-size: 1rem;
   --user-font-scale: 1rem - 16px;
-  font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.125rem);
+  font-size: clamp(
+    0.875rem,
+    0.4626rem + 1.0309vw + var(--user-font-scale),
+    1.125rem
+  );
 }
 
 body {
-  padding: 4rem 2rem;
+  padding: 10px;
   width: 100%;
   min-height: 100vh;
-  display: grid;
-  justify-content: center;
+  /* display: grid;
+  justify-content: center; */
   background: #f9fafb;
   color: #111827;
 }
@@ -25,4 +30,24 @@ body {
     background: #111827;
     color: #fff;
   }
+}
+
+a:hover,
+a:focus {
+  color: lime;
+}
+
+a[target="_blank"]::after {
+  /* still use aria-description="(opens in new window)" to support all browsers*/
+  content: " ↗️" / "";
+  content: " (opens in new window) "
+    url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10px" height="10px" fill="white" style="background-color:white;"><path d="M4.5,1.0 L2.0,1.0 A1.0,1.0 0 0,0 1.0,2.0 L1.0,2.0 L1.0,8.0 A1.0,1.0 0,0,0 2.0,9.0 L8.0,9.0 A1.0,1.0 0,0,0 9.0,8.0 L9.0,5.5 M9.0,4.5 L9.0,1.0 L5.5,1.0 M9.0,1.0 L5.0,5.0" stroke-linejoin="round" stroke="black" fill="none" stroke-width="1.0"></path></svg>');
+  content: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10px" height="10px" fill="white" style="background-color:white;"><path d="M4.5,1.0 L2.0,1.0 A1.0,1.0 0 0,0 1.0,2.0 L1.0,2.0 L1.0,8.0 A1.0,1.0 0,0,0 2.0,9.0 L8.0,9.0 A1.0,1.0 0,0,0 9.0,8.0 L9.0,5.5 M9.0,4.5 L9.0,1.0 L5.5,1.0 M9.0,1.0 L5.0,5.0" stroke-linejoin="round" stroke="black" fill="none" stroke-width="1.0"></path></svg>') /
+    " (opens in new window) ";
+  padding-left: 2px;
+  padding-right: 2px;
+  position: relative;
+  top: -3px;
+  /* only show the message to screen readers: */
+  font-size: 0px;
 }
