--- a/public/style/home.css
+++ b/public/style/home.css
@@ -1,6 +1,8 @@
 :root {
-  --font-mono: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono',
-    'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
+  --font-mono: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console",
+    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
+    "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier,
+    monospace;
   --color-light: #f3f4f6;
 }
 
@@ -14,40 +16,37 @@ a {
   color: inherit;
 }
 
-header > div {
-  font-size: clamp(2rem, -0.4742rem + 6.1856vw, 2.75rem);
-}
-
-header > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-header h1 {
-  font-size: 1em;
+h1 {
+  font-size: 4em;
   font-weight: 500;
-}
-header img {
-  width: 2em;
-  height: 2.667em;
+  text-align: center;
 }
 
 h2 {
   font-weight: 500;
-  font-size: clamp(1.5rem, 1rem + 1.25vw, 2rem);
-}
-
-.counter {
-  display: grid;
-  grid-auto-flow: column;
-  gap: 1em;
-  font-size: 2rem;
-  justify-content: center;
-  padding: 2rem 1rem;
-}
-
-.counter > pre {
+  font-size: 2em;
   text-align: center;
-  min-width: 3ch;
+}
+
+h3 {
+  text-align: center;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+td {
+  border: 1px solid;
+  height: 10ch;
+  vertical-align: top;
+}
+
+.month-text {
+  font-size: x-small;
+  font-weight: bold;
+  color: lightgrey;
+  float: right;
 }
