--- a/src/components/StatHolidaysLink.astro
+++ b/src/components/StatHolidaysLink.astro
@@ -1,4 +1,4 @@
-<a
+<a class="print-hide"
   href="https://www.canada.ca/en/revenue-agency/services/tax/public-holidays.html"
   target="_blank"
   >Stat/Public holidays</a
