--- a/public/style/global.css
+++ b/public/style/global.css
@@ -51,3 +51,13 @@ a[target="_blank"]::after {
   /* only show the message to screen readers: */
   font-size: 0px;
 }
+
+@media print {
+  .print-hide {
+    display: none;
+  }
+}
+
+@page {
+  margin: 1rem;
+}
