--- a/public/style/global.css
+++ b/public/style/global.css
@@ -56,12 +56,8 @@ a[target="_blank"]::after {
   .print-hide {
     display: none;
   }
+}
 
-  @page {
-    margin: 10px 0;
-  }
-
-  body {
-    margin: 1rem 0;
-  }
+@page {
+  margin: 1.5rem 1rem;
 }
